feat: competitions bracket perf and metrics
